<resources>
    <string name="app_name">Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="category">category</string>
    <string name="car_category">Kategori mobil: %s</string>
    <string name="car_price">Harga sewa: Rp.%s</string>
    <string name="created_at">dibuat pada: %s</string>
    <string name="updated_at">diupdate pada: .%s</string>
    <string name="created">created</string>
    <string name="updated">updated</string>
</resources>